* Added toString implementations to XmlFlowBuilder and AbstractFlowBuilder.
* Added support for the "name" attribute to the <set> and <evaluate-action> elements in the flow XML.
* Fixed bug in method isFlowElement of XmlFlowBuilder to make it namespace-aware (SWF-226).
* TransitionExecutingStateExceptionHandler now does full logging of the exceptions that it handles.

Package org.springframework.webflow.execution.factory
* The getHolder method on ConditionalFlowExecutionListenerLoader is now private. It has a package
  private return type, so there is no use in it being protected.

Package org.springframework.webflow.execution.repository
* Fixed a bug in FlowExecutionContinuationGroup. It was not correctly handling an update of a
  continuation (SWF-211).
* The default value for the maxContinuations property of the ContinuationFlowExecutionRepository
  is now 30. It used to be -1 (unlimited).
* Method getConversationManager of AbstractConversationFlowExecutionRepository is now public.
* Added debug logging to the FlowExecutionRepository implementations.

Package org.springframework.webflow.executor
* Added debug logging to FlowExecutorImpl.

Package org.springframework.webflow.samples
* Made sample projects Eclipse Dynamic Web Projects for easy deployment from Eclipse.

Changes in version 1.0 (25.10.2006)
-----------------------------------

Package org.springframework.webflow.action
* Fixed bug in FormAction where the binder was not properly initialized in all cases (SWF-193).

Package org.springframework.webflow.definition.registry
* Added createFlowDefinitionRegistry hook method to AbstractFlowDefinitionRegistryFactoryBean.

Package org.springframework.webflow.engine
* Removed END_STATE_VIEW_FLAG_PARAMETER from TextToViewSelector. As a result, the endingViewSelector
  method of AbstractFlowBuilder was also removed.
* Removed newDefaultFlowServiceLocator method from AbstractFlowBuildingFlowRegistryFactoryBean. 