@@ -44,6 +44,8 @@ Package org.springframework.webflow.engine
 * Added support for the "name" attribute to the <set> and <evaluate-action> elements in the flow XML.
 * Fixed bug in method isFlowElement of XmlFlowBuilder to make it namespace-aware (SWF-226).
 * TransitionExecutingStateExceptionHandler now does full logging of the exceptions that it handles.
+* Fixed bug in BaseFlowServiceLocator where it was not allowing user to override the default web flow
+  converters (SWF-220).
 
 Package org.springframework.webflow.execution.factory
 * The getHolder method on ConditionalFlowExecutionListenerLoader is now private. It has a package
